@@ -1,3 +1,8 @@
+2007-07-07  Tyrel Datwyler <tyreld@us.ibm.com>
+
+   * httpAdapter.c:
+   Fixed 1725493: 401 send twice
+
 2007-07-03  Adrian Schuur
 
 	* objectPath.c:
